; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/lsm1/lsm-test/extr_lsmtest7.c_newLsmConnection.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/lsm1/lsm-test/extr_lsmtest7.c_newLsmConnection.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LSM_CONFIG_PAGE_SIZE = common dso_local global i32 0, align 4
@LSM_CONFIG_BLOCK_SIZE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [11 x i8] c"testdb.lsm\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*, i32, i32, i32*)* @newLsmConnection to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @newLsmConnection(i8* %0, i32 %1, i32 %2, i32* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  store i32* null, i32** %9, align 8
  %12 = load i32*, i32** %8, align 8
  %13 = load i32, i32* %12, align 4
  %14 = icmp eq i32 %13, 0
  br i1 %14, label %15, label %43

15:                                               ; preds = %4
  %16 = load i32, i32* %6, align 4
  store i32 %16, i32* %10, align 4
  %17 = load i32, i32* %7, align 4
  store i32 %17, i32* %11, align 4
  %18 = call i32 (...) @tdb_lsm_env()
  %19 = call i32 @lsm_new(i32 %18, i32** %9)
  %20 = load i32*, i32** %8, align 8
  store i32 %19, i32* %20, align 4
  %21 = load i32*, i32** %8, align 8
  %22 = load i32, i32* %21, align 4
  %23 = icmp eq i32 %22, 0
  br i1 %23, label %24, label %42

24:                                               ; preds = %15
  %25 = load i32, i32* %10, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %31

27:                                               ; preds = %24
  %28 = load i32*, i32** %9, align 8
  %29 = load i32, i32* @LSM_CONFIG_PAGE_SIZE, align 4
  %30 = call i32 @lsm_config(i32* %28, i32 %29, i32* %10)
  br label %31

31:                                               ; preds = %27, %24
  %32 = load i32, i32* %11, align 4
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %34, label %38

34:                                               ; preds = %31
  %35 = load i32*, i32** %9, align 8
  %36 = load i32, i32* @LSM_CONFIG_BLOCK_SIZE, align 4
  %37 = call i32 @lsm_config(i32* %35, i32 %36, i32* %11)
  br label %38

38:                                               ; preds = %34, %31
  %39 = load i32*, i32** %9, align 8
  %40 = call i32 @lsm_open(i32* %39, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  %41 = load i32*, i32** %8, align 8
  store i32 %40, i32* %41, align 4
  br label %42

42:                                               ; preds = %38, %15
  br label %43

43:                                               ; preds = %42, %4
  %44 = load i32*, i32** %9, align 8
  ret i32* %44
}

declare dso_local i32 @lsm_new(i32, i32**) #1

declare dso_local i32 @tdb_lsm_env(...) #1

declare dso_local i32 @lsm_config(i32*, i32, i32*) #1

declare dso_local i32 @lsm_open(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
